...
            "state" : "translated",
            "value" : "Na hostině Fang představil překvapivý pokrm z rostlinných pochoutek, který ohromil masožravé tvory, zatímco Petal předvedla ohromující květinovou kompozici."
          }
        }
      }
    },
    "Back" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zpět"
          }
...
            "state" : "translated",
            "value" : "Květ a smutek"
          }
        }
      }
    },
    "Board" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tabulka"
          }
...
            "state" : "translated",
            "value" : "vytvořte nový cech!"
          }
        }
      }
    },
    "Create Guild" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vytvořit cech"
          }
...
            "state" : "translated",
            "value" : "Opravdu chcete odstranit tento cech?"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hotovo"
          }
...
            "state" : "translated",
            "value" : "Nastavení cechu"
          }
        }
      }
    },
    "Guilds" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cechy"
          }
...
            "state" : "translated",
            "value" : "Chyba při načítání uživatele"
          }
        }
      }
    },
    "Log In" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Přihlásit se"
          }
        }
      }
    },
    "Logout" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Odhlásit se"
          }
...
            "state" : "translated",
            "value" : "Prosím, potvrďte Vaši emailovou adresu pomocí odkazu zaslaného do Vaší emailové schránky"
          }
        }
      }
    },
    "Please, fill in your email and we will attempt to send you a password reset link" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Prosím, vyplňte svou emailovou adresu a my se Vám pokusíme zaslat email s odkazem na obnovení hesla"
          }
...
            "state" : "translated",
            "value" : "Pomodoro Timer"
          }
        }
      }
    },
    "Privacy Policy" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zásadami ochrany osobních údajů"
          }
...
            "state" : "translated",
            "value" : "Heslo znovu"
          }
        }
      }
    },
    "Reset it now!" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Obnovte si ho!"
          }
        }
      }
    },
    "Reset Password" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Obnovit heslo"
          }
...
            "state" : "translated",
            "value" : "Chyba při zasílání potvrzení"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nastavení"
          }
        }
      }
    },
    "Setup Storyline" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nastavit příběh"
          }
...
            "state" : "translated",
            "value" : "Zobrazit více"
          }
        }
      }
    },
    "Sign Up" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Registrovat"
          }
...
            "state" : "translated",
            "value" : "Chyba při nastavování příběhu"
          }
        }
      }
    },
    "Storylines" : {
      "localizations" : {
        "cs" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Příběhy"
          }
...
