...
        }
        .listRowInsets(EdgeInsets())
        .animatePlaceholder(isLoading: $viewModel.state.isInvitationsLoading)
    }
    
    private var invitationsImage: some View {
        Image("transparent_placeholder_narrow")
            .resizable()
            .aspectRatio(contentMode: .fill)
            .frame(maxWidth: .infinity, maxHeight: .infinity)
            .clipped()
    }
    
...
