...
            .clipped()
    }
    
    private var getStorylineTileLabelImage: Image {
        switch viewModel.state.storyline.kind {
        case .plainTimerStoryline:
            return Image("transparent_placeholder")
        case .draagonStoryline:
            return Image("storyline_dragon")
        case .turtleStoryline:
            return Image("storyline_turtle")
        case .flowerStoryline:
            return Image("storyline_flowers")
...
